# 3DEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dependencies.lua  README.md  premake5.lua  run.sh
3DEngine/: CMakeLists.txt  premake5.lua
3DEngine/src/: Engine.h
3DEngine/src/Animation/: Animation.cpp  Animation.h  Animator.h  Bone.cpp
3DEngine/src/Asset/: Asset.cpp  Asset.h  AssetImporter.cpp  AssetManager.h  AssetManagerBase.h  AssetMetadata.h  EditorAssetManager.cpp  EditorAssetManager.h  HDRIImporter.cpp  HDRIImporter.h  MaterialImporter.h  MeshImporter.cpp  MeshImporter.h  NetScriptImporter.h  PrefabImporter.h  SceneImporter.h  ShaderImporter.h  SkyLightImporter.h  TextureImporter.cpp  TextureImporter.h
3DEngine/src/Core/: Application.cpp  Application.h  Buffer.h  EntryPoint.cpp  Layer.cpp  Log.cpp  Log.h  OS.cpp  OS.h  UUID.cpp  UUID.h
3DEngine/src/Imgui/: ImGuiHelpers.cpp  ImGuiHelpers.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiTextEditor.cpp  ImGuiTextEditor.h
3DEngine/src/Input/: Input.h  InputDevice.h  InputKey.h  InputManager.cpp  InputManager.h
3DEngine/src/Math/: IMath.cpp  IMath.h
3DEngine/src/Misc/: MeshFileManager.cpp  MeshFileManager.h  ThumbnailManager.cpp  ThumbnailManager.h
3DEngine/src/Physics/: DynamicWorld.cpp  DynamicWorld.h  PhysicsManager.cpp  PhysicsManager.h  PhysicsShapes.h  RigidBody.cpp  RigidBody.h
3DEngine/src/Project/: Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
3DEngine/src/Renderer/: Animation.cpp  Animation.h  Camera.h  EditorCamera.cpp  Framebuffer.cpp  Framebuffer.h  InfiniteGrid.cpp  InfiniteGrid.h  Light.cpp  Light.h  Material.cpp  Material.h  MaterialSerializer.cpp  MaterialSerializer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderCommand.cpp  RenderCommand.h  RenderList.h  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  ShadowFramebuffer.cpp  ShadowFramebuffer.h  SkinnedModel.cpp  SkinnedModel.h  Vertex.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h
3DEngine/src/Renderer/Environment/: Environment.cpp  Environment.h  ProceduralSky.cpp  ProceduralSky.h  SkyLight.cpp  SkyLight.h
3DEngine/src/Renderer/Mesh/: Bone.cpp  Bone.h  Mesh.cpp  Mesh.h  SkinnedMesh.cpp  SkinnedMesh.h  StaticMesh.cpp  StaticMesh.h
3DEngine/src/Renderer/PostFX/: Bloom.cpp  Bloom.h  Bloom2.cpp  Bloom2.h  BloomFBO.cpp  BloomFBO.h
3DEngine/src/Renderer/Shaders/: Shader.cpp  Shader.h
3DEngine/src/Renderer/Textures/: Texture.h  Texture2D.cpp  Texture2D.h  TextureHDRI.cpp  TextureHDRI.h
3DEngine/src/Resource/: Animator.cpp  ImportData.cpp  ImportData.h  Material.cpp  Material.h  Prefab.cpp  Prefab.h  PrefabSerializer.cpp  PrefabSerializer.h
3DEngine/src/Resource/Shaders/: CustomShader.cpp  CustomShader.h  Shader.cpp  Shader.h  ShaderManager.h
3DEngine/src/Scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h
3DEngine/src/Scene/Componets/: AllComponents.h  Components.h  PhysicsComponents.h
3DEngine/src/Scene/Systems/: PhysicsSystem.cpp  PhysicsSystem.h  ScriptingSystem.cpp  ScriptingSystem.h  System.h  TransformSystem.cpp  TransformSystem.h
3DEngine/src/Scripting/: NetScript.cpp  NetScript.h  ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h  ScriptingEngineNet.cpp  ScriptingEngineNet.h
3DEngine/src/Scripting/NetModules/: EngineNetAPI.cpp  EngineNetAPI.h  InputNetAPI.cpp  InputNetAPI.h  NetAPIModule.h  SceneNetAPI.cpp  SceneNetAPI.h
3DEngine/src/Utils/: CustomString.h  FileDialogs.cpp  FileDialogs.h  String.cpp
Sandbox/: CMakeLists.txt  imgui.ini  premake5.lua
Sandbox/Resources/Icons/ContentBrowser/: Unconfirmed 554209.crdownload  Unconfirmed 566441.crdownload
Sandbox/Resources/shaders/: PBR.frag  PBR.vert  atmosphericSky.frag  atmosphericSky.vert  bloom.frag  bloom.vert  brdf.frag  debug.frag  debug.vert  downsample.frag  edgeDetection.frag  edgeDetection.vert  frustum.frag  gbuffer.frag  infiniteGrid.frag  infiniteGrid.vert  light.frag  light.vert  lighting.frag  line.frag  model.vert  outline.frag  outline.vert  physicsDebug.frag  prefilter.frag  quad.frag  quad.vert  shadowMap.frag  shadowMap.vert  skinned.frag  skinned.vert  sprite.frag  sprite.vert  upsample.frag  upsample.vert
Sandbox/SandboxProject/: SandboxProject.3dproj
Sandbox/SandboxProject/.net/: SandboxProject.csproj
Sandbox/SandboxProject/Assets/: AssetRegistry.yaml  testShader.shader  text.lua
Sandbox/SandboxProject/Assets/Materials/: MM.material  Material2.material  NewMaterial.material  RedMat.material  TestMat.material  black.material  helmet.material  plain.material  test.material
Sandbox/SandboxProject/Assets/Models/: Box.gltf.import  Camera.gltf  Camera.gltf.import  SciFiHelmet.gltf.import  Sponza.gltf.import  Suzanne.gltf.import
Sandbox/SandboxProject/Assets/Prefabs/: box2.prefab  hello.prefab  single_box.prefab  ss.prefab  tt.prefab
Sandbox/SandboxProject/Assets/Scenes/: Helmet.scene  ProceduralTest.scene  Sponza.scene  Test.scene  bloomTest.scene  cameraTest.scene  helmet.scene  helmet2.scene  kenny.scene  (+7 more)
Sandbox/res/scenes/: helmentScene.scene  mousepick.scene  scene2.scene  suzanne.scene
Sandbox/res/scripts/: main.lua
Sandbox/src/: AppLayer.cpp  AppLayer.h  SandboxApp.cpp
Sandbox/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  EnvironmentPanel.cpp  EnvironmentPanel.h  InputMapPanel.cpp  InputMapPanel.h  MaterialEditorPanel.cpp  MaterialEditorPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ThumbnailCache.cpp  ThumbnailCache.h
src/3DEngine/: CMakeLists.txt
src/3DEngine/src/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Engine.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Source.cpp  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h
src/Sandbox/: CMakeLists.txt  Untitled.3dproj
src/Sandbox/SandboxProject/: SandboxProject.3dproj
src/Sandbox/src/: AppLayer.cpp  AppLayer.h  SandboxApp.cpp
(+407 files in other folders)
